# lcstack

./: .env.example  .gitignore  .pre-commit-config.yaml  README.CN.md  README.md  cli.py  pyproject.toml  requirements.txt
examples/: README.md.txt  basic.ipynb  components.ipynb  output_parser.ipynb  workflow.ipynb  workflow_hierarchy.ipynb
examples/configs/: basic_chains.yaml  llm_chain.yaml  llms.yaml  settings.yaml  workflow_plan_and_react.yaml  workflow_react.yaml  workflow_simple_as_agent.yaml
examples/configs/wf_hierarchical_team/: edges.json  graph_agents.yaml  graph_supervisor_as_agent.yaml  graph_supervisor_header.yaml  graph_supervisor_jokers.yaml  graph_supervisor_teachers.yaml  nodes.json
examples/data/lcstack_ai_docs/: chroma.sqlite3
lcstack/: __init__.py  base.py  cli.py  configs.py  lcstack_builder.py  registry.py  server.py  utils.py
lcstack/components/: converters.py  utils.py
lcstack/components/agents/: __init__.py  agent_supervisor.py  base.py  plan_and_execute.py  react_agent.py
lcstack/components/chains/: __init__.py  base.py  deprecated.py  rag.py  router.py  sql.py
lcstack/components/chat_history/: __init__.py  base.py
lcstack/components/document_loaders/: __init__.py  base.py  epub_loader.py
lcstack/components/embeddings/: __init__.py  base.py
lcstack/components/indexing/: __init__.py  base.py
lcstack/components/languge_models/: __init__.py  base.py
lcstack/components/output_parser/: __init__.py  base.py
lcstack/components/prompts/: __init__.py  (+1 more)
lcstack/core/: component.py  container.py  initializer.py  models.py
lcstack/graph/: __init__.py  base.py  conditional.py  initializer.py
lcstack/tracers/: __init__.py  base.py  json.py  logging.py
tests/: basics.yaml  chains_01.yaml  run_tests.py  workflows.yaml
tests/configs/: 01_llms.yaml  02_prompts.yaml  11_llm_chain.yaml  12_basic_chains.yaml  31_graph_simple_as_agent.yaml  settings.yaml  simple_workflow.yaml
tests/parser/: test_mako.py  test_node_mako_io_mapping.py  test_node_mapping.py  test_primitive_parser.py  test_wf_mako_in_branchs.py  test_wf_mako_io_mapping.py  test_wf_node_mapping.py
(+16 files in other folders)
