[tool.poetry]
name = "lcstack"
version = "0.1.1"
description = ""
authors = ["Beking <beking_cn@hotmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{ include = "lcstack" }]
repository = "https://github.com/bekingcn/lcstack"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.45.0"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
langgraph = "^0.2.20"
langchain-groq = "^0.2"
langchain-google-genai = "^2"
langchain-ollama = "^0.2"
mako = "^1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"
pyright = "^1.1.360"
jsonref = "^1.1.0"
pre-commit = "^3.7.0"


[tool.poetry.group.huggingface.dependencies]
langchain-huggingface = "^0.1"


[tool.poetry.group.chroma.dependencies]
langchain-chroma = "^0.1.4"


[tool.poetry.group.epub.dependencies]
ebooklib = "^0.18"
html2text = "^2024"

[tool.coverage.report]
show_missing = true

[tool.pyright]
include = ["lcstack"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/tests/**",
]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = "warning"
reportUnknownLambdaType = "warning"
typeCheckingMode = "standard"  # TODO: using strict mode
stubs = ["ebooklib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
